<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_booking2"
    android:background="@drawable/img1">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:background="#A112E3" />


    <EditText
        android:id="@+id/et_date"
        android:layout_width="335dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/customer_input"

        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/et_date"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="#5F066E"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="338dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/customer_input"

        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#6A047C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_date"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aclonica"
        android:text="@string/confirm_btn"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:backgroundTint="#A112E3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/view_btn"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="291dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aclonica"
        android:text="@string/view_btn"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:backgroundTint="#A112E3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/Update_btn"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aclonica"
        android:text="@string/Update_btn"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:backgroundTint="#A112E3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Delete_btn"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aclonica"
        android:text="@string/Delete_btn"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:backgroundTint="#A112E3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_style"
        android:fontFamily="@font/aclonica"
        android:text="@string/back_btn"
        app:backgroundTint="#A112E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_style"
        android:fontFamily="@font/aclonica"
        android:text="@string/clear_btn"
        app:backgroundTint="#A112E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtroom21"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/txtroom21"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_btn" />

    <TextView
        android:id="@+id/txtroom22"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtroom22"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtroom21" />

    <TextView
        android:id="@+id/txtroom23"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtroom23"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtroom22" />

    <TextView
        android:id="@+id/txtroom31"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtroom31"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtroom23" />

    <TextView
        android:id="@+id/txtroom32pers"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtroom32pers"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtroom31" />

    <TextView
        android:id="@+id/txtroom41"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtroom41"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtroom32pers" />

    <TextView
        android:id="@+id/txtroom42"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtroom42"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtroom41" />

    <EditText
        android:id="@+id/no_r_21"
        android:layout_width="52dp"
        android:layout_height="38dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtroom21"
        app:layout_constraintStart_toEndOf="@+id/txtroom21"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/no_r_22"
        android:layout_width="51dp"
        android:layout_height="37dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtroom22"
        app:layout_constraintStart_toEndOf="@+id/txtroom22"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/no_r_23"
        android:layout_width="52dp"
        android:layout_height="38dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtroom23"
        app:layout_constraintStart_toEndOf="@+id/txtroom23"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/no_r_31"
        android:layout_width="52dp"
        android:layout_height="38dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtroom31"
        app:layout_constraintStart_toEndOf="@+id/txtroom31"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/no_r_32"
        android:layout_width="52dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtroom32pers"
        app:layout_constraintStart_toEndOf="@+id/txtroom32pers"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/no_r_41"
        android:layout_width="51dp"
        android:layout_height="36dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtroom41"
        app:layout_constraintStart_toEndOf="@+id/txtroom41"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/no_r_42"
        android:layout_width="52dp"
        android:layout_height="39dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtroom42"
        app:layout_constraintStart_toEndOf="@+id/txtroom42"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_bill"
        android:layout_width="69dp"
        android:layout_height="36dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="4dp"
        android:textColor="#151515"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_r_42" />

    <TextView
        android:id="@+id/billLable"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/billLable"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtroom42" />

    <TextView
        android:id="@+id/rupeeLable"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/rupeeLable"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/billLable"
        app:layout_constraintTop_toBottomOf="@+id/txtroom42" />


</androidx.constraintlayout.widget.ConstraintLayout>