<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lunch_fab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lunch_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:padding="8dp"
            android:text="Double Rooms"
            android:textColor="#000"
            android:textSize="34sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background2">

            <TextView
                android:id="@+id/dinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="25dp"
                android:text="@string/room_21"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/brk_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#0000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"
                android:text="@string/price_btn"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="1dp"
                android:src="@drawable/doubleroom" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background2">

            <TextView
                android:id="@+id/room_42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="25dp"
                android:text="@string/room_22"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Dinner_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#0000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"
                android:text="@string/price_btn"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/doubleroom" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background2">

            <TextView
                android:id="@+id/room_23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="25dp"
                android:text="@string/room_23"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/lunch_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#0000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"
                android:text="@string/price_btn"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/doubleroom" />

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNext"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        app:backgroundTint="@color/purple_200"
        tools:ignore="SpeakableTextPresentCheck" />


</LinearLayout>
